--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -264,7 +264,7 @@
 }
 @media screen and (max-width: 768px) {
   .character-model {
-    z-index: 0;
+    z-index: 5;
   }
   .landing-info h3 {
     font-size: 18px;
